# 2LabMephi4

./: CMakeLists.txt  Graph.h  main.cpp  test.cpp  test.h  visualisation.cpp  visualisation.h
